apps/test-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: test-app
  ports:
    - port: 80
      targetPort: 8080
